bugfixed for example execution